--- a/src/components/App.css
+++ b/src/components/App.css
@@ -2,27 +2,27 @@
   text-align: center;
 }
 
-.App-logo {
-  animation: App-logo-spin infinite 20s linear;
+.Applogo {
+  animation: Applogo-spin infinite 20s linear;
   height: 80px;
 }
 
-.App-header {
+.Appheader {
   background-color: #222;
   height: 150px;
   padding: 20px;
   color: white;
 }
 
-.App-title {
+.Apptitle {
   font-size: 1.5em;
 }
 
-.App-intro {
+.Appintro {
   font-size: large;
 }
 
-@keyframes App-logo-spin {
+@keyframes Applogo-spin {
   from { transform: rotate(0deg); }
   to { transform: rotate(360deg); }
 }
