added api usage

--- a/src/containers/Home.scss
+++ b/src/containers/Home.scss
@@ -1,6 +1,4 @@
-.autoCompleteBox {
-  border:1px solid #524a4a;
-}
+
 
 .autoCompleteParent {
   width:500px;
@@ -10,7 +8,9 @@
     position: relative;
   }
 }
-
+.Appintro {
+  font-size: large;
+}
 :global {
 
   .autocompleteItem div {
